--- a/gitops/env/stage1/argocd-secrets.yaml
+++ b/gitops/env/stage1/argocd-secrets.yaml
@@ -61,6 +61,9 @@ spec:
     - secretKey: githubAppID
       remoteRef:
         key: githubAppID
+    - secretKey: githubAppInstallationID
+      remoteRef:
+        key: githubAppInstallationID
     - secretKey: githubAppPrivateKey
       remoteRef:
         key: githubAppPrivateKey
@@ -81,4 +84,5 @@ spec:
   data:
     - secretKey: admin.password
       remoteRef:
-        key: argocdInitialPasswordBcrypt
+        key: argocdInitialPassword
+        decodingStrategy: Base64
