--- a/gitops/env/stage2/templates/gerrit-post.yaml
+++ b/gitops/env/stage2/templates/gerrit-post.yaml
@@ -75,18 +75,8 @@ spec:
       serviceAccountName: gerrit-writer-sa
       containers:
         - name: gerrit-post-container
-          env:
-            - name: GERRIT_ADMIN_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: keycloak-gerrit-admin
-                  key: username
-            - name: GERRIT_ADMIN_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: keycloak-gerrit-admin
-                  key: password
           image: {{ .Values.config.postjobs.gerrit }}
+          imagePullPolicy: Always
           volumeMounts:
             - mountPath: /mnt/git
               name: shared
