--- a/gitops/env/stage2/templates/jenkins.yaml
+++ b/gitops/env/stage2/templates/jenkins.yaml
@@ -29,28 +29,24 @@ spec:
             userkey: jenkins-admin-user
             passwordkey: jenkins-admin-password
           jenkinsUrl: https://{{ .Values.config.domain }}/jenkins
-          numExecutors: "1"
           installPlugins:
-            - kubernetes:latest
-            - kubernetes-credentials-provider:latest
-            - configuration-as-code:latest
-            - configuration-as-code-groovy:latest
-            - workflow-aggregator:latest
-            - keycloak:latest
-            - role-strategy:latest
-            - job-dsl:latest
-            - git:latest
-            - github-branch-source:latest
-            - gerrit-trigger:latest
-            - gerrit-code-review:latest
-            - google-compute-engine:latest
-            - docker-workflow:latest
-            - ssh-slaves:latest
-            - google-kubernetes-engine:latest
-            - pipeline-stage-view:latest
-            - throttle-concurrents:latest
-            - build-blocker-plugin:latest
-            - startup-trigger-plugin:latest
+            - kubernetes:4306.vc91e951ea_eb_d
+            - kubernetes-credentials-provider:1.273.v15e69b_55ea_8e
+            - configuration-as-code:1932.v75cb_b_f1b_698d
+            - configuration-as-code-groovy:1.1
+            - workflow-aggregator:600.vb_57cdd26fdd7
+            - keycloak:2.3.2
+            - job-dsl:1.90
+            - git:5.7.0
+            - github-branch-source:1810.v913311241fa_9
+            - gerrit-trigger:2.42.0
+            - gerrit-code-review:0.4.9
+            - google-compute-engine:4.589.v8a_eeb_b_d3c45c
+            - ssh-slaves:3.1021.va_cc11b_de26a_e
+            - google-kubernetes-engine:0.430.v4cc1fa_1847a_9
+            - pipeline-stage-view:2.37
+            - build-blocker-plugin:166.vc82fc20b_a_ed6
+            - startup-trigger-plugin:2.9.4
           additionalExistingSecrets:
             - name: jenkins-keycloak
               keyName: keycloakJson
@@ -93,6 +89,40 @@ spec:
                   systemMessage: Welcome to Horizon SDV server.
                   clouds:
                     - computeEngine:
+                        cloudName: cuttlefish-vm-n1-standard-64-150gb
+                        configurations:
+                          - bootDiskAutoDelete: true
+                            bootDiskSizeGb: 10
+                            bootDiskSizeGbStr: "10"
+                            bootDiskType: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}/diskTypes/hyperdisk-balanced"
+                            description: "cuttlefish-vm-n1-standard-64-150gb"
+                            javaExecPath: "/usr/bin/java"
+                            labelSet:
+                              - name: "cuttlefish-vm-n1-standard-64-150gb"
+                            labelString: "cuttlefish-vm-n1-standard-64-150gb"
+                            labels: "cuttlefish-vm-n1-standard-64-150gb"
+                            launchTimeoutSeconds: 300
+                            launchTimeoutSecondsStr: "300"
+                            mode: NORMAL
+                            namePrefix: "cuttlefish-vm-n1-standard-64-150gb"
+                            numExecutors: 1
+                            numExecutorsStr: "1"
+                            oneShot: true
+                            region: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/regions/{{ .Values.config.region }}"
+                            remoteFs: "/home/jenkins"
+                            retentionTimeMinutes: 6
+                            retentionTimeMinutesStr: "6"
+                            runAsUser: "jenkins"
+                            sshConfiguration:
+                              customPrivateKeyCredentialsId: "jenkins-cuttlefish-vm-ssh-private-key"
+                            template: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/global/instanceTemplates/instance-template-cuttlefish-vm-n1-standard-64-150gb"
+                            useInternalAddress: true
+                            zone: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}"
+                        credentialsId: "gce-creds"
+                        instanceCapStr: "20"
+                        noDelayProvisioning: true
+                        projectId: "{{ .Values.config.projectID }}"
+                    - computeEngine:
                         cloudName: cuttlefish-vm-main
                         configurations:
                           - bootDiskAutoDelete: true
@@ -127,22 +157,22 @@ spec:
                         noDelayProvisioning: true
                         projectId: {{ .Values.config.projectID }}
                     - computeEngine:
-                        cloudName: "cuttlefish-vm-v101"
+                        cloudName: "cuttlefish-vm-v110"
                         configurations:
                         - bootDiskAutoDelete: true
                           bootDiskSizeGb: 10
                           bootDiskSizeGbStr: "10"
                           bootDiskType: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}/diskTypes/hyperdisk-balanced"
-                          description: "cuttlefish-vm-v101"
+                          description: "cuttlefish-vm-v110"
                           javaExecPath: "/usr/bin/java"
                           labelSet:
-                          - name: "cuttlefish-vm-v101"
-                          labelString: "cuttlefish-vm-v101"
-                          labels: "cuttlefish-vm-v101"
+                          - name: "cuttlefish-vm-v110"
+                          labelString: "cuttlefish-vm-v110"
+                          labels: "cuttlefish-vm-v110"
                           launchTimeoutSeconds: 300
                           launchTimeoutSecondsStr: "300"
                           mode: NORMAL
-                          namePrefix: "cuttlefish-vm-v101"
+                          namePrefix: "cuttlefish-vm-v110"
                           numExecutors: 1
                           numExecutorsStr: "1"
                           oneShot: true
@@ -208,6 +238,14 @@ spec:
                   - script: >
                       pipelineJob('Android/Environment/Docker Image Template') {
                         description('<p>Build the container image used on Kubernetes for building Android targets and Cuttlefish instances.</p>')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
                         definition {
                           cpsScm {
                             lightweight()
@@ -227,6 +265,14 @@ spec:
                   - script: >
                       pipelineJob('Android/Environment/CF Instance Template') {
                         description('<p>Pipeline for creating and managing GCE instance templates optimized for Cuttlefish workflows, such as CVD Launcher and CTS Execution.<br/>Includes an option to delete outdated instances and artifacts.</p>')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
                         definition {
                           cpsScm {
                             lightweight()
@@ -246,12 +292,19 @@ spec:
                   - script: >
                       pipelineJob('Android/Environment/Development Instance') {
                         description('''
-                          <br/><h3>Development Instance Pipeline</h3>
                           <p>This job allows creation of temporary build instances that can be used to aid development.<br/>
-                          Instances can be expensive and therefore there is a maximum up-time before the instance will automatically be terminated</p>
+                          Instances can be expensive and therefore there is a maximum up-time before the instance will automatically be terminated.</p>
                           <p>Access the instance via <tt>bastion</tt> host and <tt>kubectl</tt> command line tool, e.g.</p>
                           <p><tt>kubectl exec -it -n jenkins &lt;pod name&gt; -- bash</tt></p>
                           <p><b>Note:</b> users are responsible for saving their own work to persistent storage before expiry.</p>''')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
                         definition {
                           cpsScm {
                             lightweight()
@@ -261,7 +314,7 @@ spec:
                                   url('https://github.com/AGBG-ASG/acn-horizon-sdv.git')
                                   credentials('jenkins-github-creds')
                                 }
-                                branch('*/env/sbx')
+                                branch('*/{{ .Values.config.workloads.android.branch }}')
                               }
                             }
                             scriptPath('workloads/android/pipelines/environment/dev_instance/Jenkinsfile')
@@ -269,8 +322,74 @@ spec:
                         }
                       }
                   - script: >
+                      pipelineJob('Android/Environment/Delete Cuttlefish VM Instance') {
+                        description('''
+                          <p>This job allows tooling developers delete Cuttlefish VM instances.<br/>
+                          Not for everyday use, simply to aid developers clean up if expensive instances are left running.</p>''')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
+                        definition {
+                          cpsScm {
+                            lightweight()
+                            scm {
+                              git {
+                                remote {
+                                  url('https://github.com/AGBG-ASG/acn-horizon-sdv.git')
+                                  credentials('jenkins-github-creds')
+                                }
+                                branch('*/{{ .Values.config.workloads.android.branch }}')
+                              }
+                            }
+                            scriptPath('workloads/android/pipelines/environment/delete_cf_vm_instance/Jenkinsfile')
+                          }
+                        }
+                      }
+                  - script: >
+                      pipelineJob('Android/Environment/Delete MTK Connect Testbench') {
+                        description('''
+                          <p>This job allows tooling developers delete MTK Connect offline testbenches..<br/>
+                          Not for everyday use, simply to aid developers clean up during developing tests.</p>''')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
+                        definition {
+                          cpsScm {
+                            lightweight()
+                            scm {
+                              git {
+                                remote {
+                                  url('https://github.com/AGBG-ASG/acn-horizon-sdv.git')
+                                  credentials('jenkins-github-creds')
+                                }
+                                branch('*/{{ .Values.config.workloads.android.branch }}')
+                              }
+                            }
+                            scriptPath('workloads/android/pipelines/environment/delete_mtkc_testbench/Jenkinsfile')
+                          }
+                        }
+                      }
+                  - script: >
                       pipelineJob('Android/Builds/AAOS Builder') {
                         description('<p>Android Automotive build pipeline.<br/>This pipeline builds Android Automotive OS targets.</p>')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
                         definition {
                           cpsScm {
                             lightweight()
@@ -290,6 +409,14 @@ spec:
                   - script: >
                       pipelineJob('Android/Builds/CTS Builder') {
                         description('<p>Builds Android Compliance Test Suite test harness, rather than use standard Google release.<br/>CTS_Execution can then use this instead of default Android CTS test harness.</p>')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
                         definition {
                           cpsScm {
                             lightweight()
@@ -308,7 +435,7 @@ spec:
                       }
                   - script: >
                       pipelineJob('Android/Builds/Gerrit') {
-                        description('<p>Gerrit triggered build and test. Triggered by Gerrit commits.</p>')
+                        description('<p>Gerrit triggered build and test.Triggered by Gerrit commits.</p>')
                         triggers {
                           hudsonStartupTrigger {
                             nodeParameterName("")
@@ -336,6 +463,14 @@ spec:
                   - script: >
                       pipelineJob('Android/Tests/CTS Execution') {
                         description('<p>Run the CTS test harness against Cuttlefish Virtual Device images.</p>')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
                         definition {
                           cpsScm {
                             lightweight()
@@ -355,6 +490,14 @@ spec:
                   - script: >
                       pipelineJob('Android/Tests/CVD Launcher') {
                         description('<p>Launches Cuttlefish Virtual Devices (CVD) on the Cuttlefish Virtual Machine instances created by GCE from Cuttlefish instance templates</p>')
+                        triggers {
+                          hudsonStartupTrigger {
+                            nodeParameterName("")
+                            label("")
+                            quietPeriod("0")
+                            runOnChoice("ON_CONNECT")
+                          }
+                        }
                         definition {
                           cpsScm {
                             lightweight()
