--- a/gitops/env/stage2/templates/jenkins-init.yaml
+++ b/gitops/env/stage2/templates/jenkins-init.yaml
@@ -97,7 +97,6 @@ metadata:
     argocd.argoproj.io/sync-wave: "1"
 type: Opaque
 stringData:
-  appID: "1137182"
   id: "github-creds"
 ---
 apiVersion: v1
@@ -183,6 +182,9 @@ spec:
     name: jenkins-github-creds
     creationPolicy: Merge
   data:
+    - secretKey: appID
+      remoteRef:
+        key: githubAppID
     - secretKey: privateKey
       remoteRef:
         key: githubAppPrivateKeyPKCS8
