--- a/gitops/env/stage2/templates/jenkins.yaml
+++ b/gitops/env/stage2/templates/jenkins.yaml
@@ -505,6 +505,8 @@ spec:
                           useRestApi: false
                   timestamper:
                     allPipelines: true
+                    systemTimeFormat: '<b>'yyyy-MM-dd HH:mm:ss.SSS'</b> '
+                    elapsedTimeFormat: '<b>'HH:mm:ss.S'</b> '
   destination:
     server: https://kubernetes.default.svc
     namespace: jenkins
