--- a/gitops/env/stage2/templates/mtk-connect-post.yaml
+++ b/gitops/env/stage2/templates/mtk-connect-post.yaml
@@ -77,3 +77,36 @@ spec:
           image: {{ .Values.config.postjobs.mtkconnect }}
           imagePullPolicy: Always
       restartPolicy: Never
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: mtk-connect-api-key-config
+  namespace: mtk-connect
+  annotations:
+    argocd.argoproj.io/sync-wave: "8"
+spec:
+  schedule: "0 0 * * *"
+  startingDeadlineSeconds: 300
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          serviceAccountName: mtk-connect-writer-sa
+          containers:
+            - name: mtk-connect-api-key-config
+              args: ["--api-domain", "{{ .Values.config.domain }}"]
+              env:
+              - name: MTK_KEY_UPD_USERNAME
+                valueFrom:
+                  secretKeyRef:
+                    name: mtk-connect-apikey
+                    key: username
+              - name: MTK_KEY_UPD_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: mtk-connect-apikey
+                    key: password
+              image: {{ .Values.config.postjobs.mtkconnectkey }}
+              imagePullPolicy: Always
+          restartPolicy: Never
