configuring dev environment

--- a/gitops/env/stage1/argocd-config.yaml
+++ b/gitops/env/stage1/argocd-config.yaml
@@ -28,7 +28,7 @@ spec:
   project: horizon-sdv
   source:
     repoURL: https://github.com/AGBG-ASG/acn-horizon-sdv
-    targetRevision: env/sbx
+    targetRevision: env/dev
     path: gitops/env/stage2
   destination:
     server: https://kubernetes.default.svc
