--- a/gitops/env/stage2/apps/mtk-connect/values.yaml
+++ b/gitops/env/stage2/apps/mtk-connect/values.yaml
@@ -12,4 +12,4 @@ spec:
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/AGBG-ASG/acn-horizon-sdv
-    targetRevision: env/sbx
+    targetRevision: env/dev
