configuring dev environment sdva

--- a/gitops/env/stage1/argocd-secrets.yaml
+++ b/gitops/env/stage1/argocd-secrets.yaml
@@ -9,7 +9,7 @@ metadata:
   name: argocd-sa
   namespace: argocd
   annotations:
-    iam.gke.io/gcp-service-account: gke-argocd-sa@sdvc-2108202401.iam.gserviceaccount.com
+    iam.gke.io/gcp-service-account: gke-argocd-sa@sdva-2108202401.iam.gserviceaccount.com
 ---
 apiVersion: v1
 kind: Secret
@@ -36,7 +36,7 @@ metadata:
 spec:
   provider:
     gcpsm:
-      projectID: "sdvc-2108202401"
+      projectID: "sdva-2108202401"
       auth:
         workloadIdentity:
           clusterLocation: europe-west1
