--- a/.github/workflows/terraform_workflow.yaml
+++ b/.github/workflows/terraform_workflow.yaml
@@ -13,6 +13,8 @@ jobs:
     outputs:
       branch: ${{ steps.branch.outputs.parsed_branch }}
       parsed_branch: ${{ steps.branch.outputs.parsed_branch }}
+    env:
+      ALLOWED_BRANCHES_FOR_TFAPPLY: 'env/sbx,env/dev,env/tst,main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -24,6 +26,17 @@ jobs:
           PARSED_BRANCH_NAME=${BRANCH_NAME#*/}
           echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
           echo "parsed_branch=$PARSED_BRANCH_NAME" >> $GITHUB_OUTPUT
+
+       - name: Check if branch is allowed
+      id: check-branch
+      run: |
+        BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})
+        if [[ ! ",${ALLOWED_BRANCHES_FOR_TFAPPLY}," == *",$BRANCH_NAME,"* ]]; then
+          echo "Branch $BRANCH_NAME is not allowed."
+          exit 1
+        else
+          echo "Branch $BRANCH_NAME is allowed."
+        fi
   terraform:
     needs: parsing_branch
     uses: ./.github/workflows/terraform.yaml
