--- a/gitops/env/stage2/templates/jenkins.yaml
+++ b/gitops/env/stage2/templates/jenkins.yaml
@@ -116,7 +116,7 @@ spec:
                             runAsUser: "jenkins"
                             sshConfiguration:
                               customPrivateKeyCredentialsId: "jenkins-cuttlefish-vm-ssh-private-key"
-                            template: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/global/instanceTemplates/instance-template-cuttlefish-vm-main-debian"
+                            template: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/global/instanceTemplates/instance-template-cuttlefish-vm-main"
                             useInternalAddress: true
                             zone: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}"
                         credentialsId: "gce-creds"
@@ -150,7 +150,75 @@ spec:
                           runAsUser: "jenkins"
                           sshConfiguration:
                             customPrivateKeyCredentialsId: "jenkins-cuttlefish-vm-ssh-private-key"
-                          template: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/global/instanceTemplates/instance-template-cuttlefish-vm-v101-debian"
+                          template: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/global/instanceTemplates/instance-template-cuttlefish-vm-v101"
+                          useInternalAddress: true
+                          zone: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}"
+                        credentialsId: "gce-creds"
+                        instanceCapStr: "20"
+                        noDelayProvisioning: true
+                        projectId: {{ .Values.config.projectID }}
+                    - computeEngine:
+                        cloudName: "cuttlefish-vm-v110-n1-standard-64-150gb"
+                        configurations:
+                        - bootDiskAutoDelete: true
+                          bootDiskSizeGb: 10
+                          bootDiskSizeGbStr: "10"
+                          bootDiskType: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}/diskTypes/hyperdisk-balanced"
+                          description: "cuttlefish-vm-v110-n1-standard-64-150gb"
+                          javaExecPath: "/usr/bin/java"
+                          labelSet:
+                          - name: "cuttlefish-vm-v110-n1-standard-64-150gb"
+                          labelString: "cuttlefish-vm-v110-n1-standard-64-150gb"
+                          labels: "cuttlefish-vm-v110-n1-standard-64-150gb"
+                          launchTimeoutSeconds: 300
+                          launchTimeoutSecondsStr: "300"
+                          mode: NORMAL
+                          namePrefix: "cuttlefish-vm-v110-n1-standard-64-150gb"
+                          numExecutors: 1
+                          numExecutorsStr: "1"
+                          oneShot: true
+                          region: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/regions/{{ .Values.config.region }}"
+                          remoteFs: "/home/jenkins"
+                          retentionTimeMinutes: 6
+                          retentionTimeMinutesStr: "6"
+                          runAsUser: "jenkins"
+                          sshConfiguration:
+                            customPrivateKeyCredentialsId: "jenkins-cuttlefish-vm-ssh-private-key"
+                          template: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/global/instanceTemplates/instance-template-cuttlefish-vm-v110-n1-standard-64-150gb"
+                          useInternalAddress: true
+                          zone: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}"
+                        credentialsId: "gce-creds"
+                        instanceCapStr: "20"
+                        noDelayProvisioning: true
+                        projectId: {{ .Values.config.projectID }}
+                    - computeEngine:
+                        cloudName: "cuttlefish-vm-main-n1-standard-64-150gb"
+                        configurations:
+                        - bootDiskAutoDelete: true
+                          bootDiskSizeGb: 10
+                          bootDiskSizeGbStr: "10"
+                          bootDiskType: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}/diskTypes/hyperdisk-balanced"
+                          description: "cuttlefish-vm-main-n1-standard-64-150gb"
+                          javaExecPath: "/usr/bin/java"
+                          labelSet:
+                          - name: "cuttlefish-vm-main-n1-standard-64-150gb"
+                          labelString: "cuttlefish-vm-main-n1-standard-64-150gb"
+                          labels: "cuttlefish-vm-main-n1-standard-64-150gb"
+                          launchTimeoutSeconds: 300
+                          launchTimeoutSecondsStr: "300"
+                          mode: NORMAL
+                          namePrefix: "cuttlefish-vm-main-n1-standard-64-150gb"
+                          numExecutors: 1
+                          numExecutorsStr: "1"
+                          oneShot: true
+                          region: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/regions/{{ .Values.config.region }}"
+                          remoteFs: "/home/jenkins"
+                          retentionTimeMinutes: 6
+                          retentionTimeMinutesStr: "6"
+                          runAsUser: "jenkins"
+                          sshConfiguration:
+                            customPrivateKeyCredentialsId: "jenkins-cuttlefish-vm-ssh-private-key"
+                          template: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/global/instanceTemplates/instance-template-cuttlefish-vm-main-n1-standard-64-150gb"
                           useInternalAddress: true
                           zone: "https://www.googleapis.com/compute/v1/projects/{{ .Values.config.projectID }}/zones/{{ .Values.config.zone }}"
                         credentialsId: "gce-creds"
