--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -91,7 +91,7 @@ on:
 jobs:
   get-env:
     name: Get environment
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       environment: ${{ steps.get-env.outputs.environment }}
       env_only: ${{ steps.get-env.outputs.env_only }}
@@ -113,7 +113,7 @@ jobs:
 
   terraform:
     name: Terraform
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: get-env
     environment: ${{ needs.get-env.outputs.environment }}
 
