--- a/.github/workflows/terraform_workflow.yaml
+++ b/.github/workflows/terraform_workflow.yaml
@@ -9,12 +9,10 @@ on:
 
 jobs:
   parsing_branch:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       branch: ${{ steps.branch.outputs.parsed_branch }}
       parsed_branch: ${{ steps.branch.outputs.parsed_branch }}
-    env:
-      ALLOWED_BRANCHES_FOR_TFAPPLY: 'env/sbx,env/dev,env/tst,main,env/sbx_feature_luk_taa_543_tf_apply_error'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -27,16 +25,6 @@ jobs:
           echo "branch_name=$BRANCH_NAME" >> $GITHUB_OUTPUT
           echo "parsed_branch=$PARSED_BRANCH_NAME" >> $GITHUB_OUTPUT
 
-      - name: Check if branch is allowed
-        id: check-branch
-        run: |
-          BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})
-          if [[ ! ",${ALLOWED_BRANCHES_FOR_TFAPPLY}," == *",$BRANCH_NAME,"* ]]; then
-            echo "Branch $BRANCH_NAME is not allowed."
-            exit 1
-          else
-            echo "Branch $BRANCH_NAME is allowed."
-          fi
   terraform:
     needs: parsing_branch
     uses: ./.github/workflows/terraform.yaml
