TAA-252: Remove superfluous white space

--- a/gitops/env/stage2/templates/jenkins.yaml
+++ b/gitops/env/stage2/templates/jenkins.yaml
@@ -21,6 +21,8 @@ spec:
           existingClaim: "jenkins-home-volume"
         rbac:
           readSecrets: true
+        agent:
+          containerCap: 20
         controller:
           jenkinsUriPrefix: /jenkins
           admin:
