--- a/.github/workflows/terraform_workflow.yaml
+++ b/.github/workflows/terraform_workflow.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   parsing_branch:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     outputs:
       branch: ${{ steps.branch.outputs.parsed_branch }}
       parsed_branch: ${{ steps.branch.outputs.parsed_branch }}
