--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -294,7 +294,7 @@ jobs:
         continue-on-error: true
 
       - name: Reformat Plan
-        if: ${{ inputs.environment }} != ''
+        if: inputs.environment != ''
         env:
           TFPLAN_STDOUT: ${{ steps.tfplan.outputs.stdout }}
           TFPLAN_STDERR: ${{ steps.tfplan.outputs.stderr }}
@@ -308,7 +308,7 @@ jobs:
           fi
 
       - name: Put Plan in Env Var
-        if: ${{ inputs.environment }} != ''
+        if: inputs.environment != ''
         run: |
           PLAN=$(cat plan.txt)
           echo "PLAN<<EOF" >> $GITHUB_ENV
@@ -317,7 +317,7 @@ jobs:
 
       - name: Post Plan to GitHub PR
         uses: mshick/add-pr-comment@v2
-        if: ${{ inputs.environment }} != ''
+        if: inputs.environment != ''
         with:
           allow-repeats: false
           repo-token: ${{steps.get_github_app_token.outputs.token}}
@@ -339,7 +339,7 @@ jobs:
       - name: terraform apply
         working-directory: ${{ inputs.directory }}/
         id: tfapply
-        if: ${{ inputs.environment }} != ''
+        if: inputs.environment != ''
         env:
           TF_VAR_sdv_gh_access_token: ${{ steps.get_github_app_token.outputs.token }}
         run: |
