TAA-559: Add build user to build description
Useful to easily track individuals changes rather than
having open each job.

--- a/workloads/android/pipelines/builds/cts_builder/Jenkinsfile
+++ b/workloads/android/pipelines/builds/cts_builder/Jenkinsfile
@@ -139,7 +139,7 @@ pipeline {
           }
           steps {
             script {
-              currentBuild.description = "${env.AAOS_LUNCH_TARGET}"
+              currentBuild.description = "${env.AAOS_LUNCH_TARGET}" + "<br>" + "$BUILD_USER"
             }
             container(name: 'builder') {
               catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
@@ -163,7 +163,7 @@ pipeline {
           }
           steps {
             script {
-              currentBuild.description = "${env.AAOS_LUNCH_TARGET}"
+              currentBuild.description = "${env.AAOS_LUNCH_TARGET}" + "<br>" + "$BUILD_USER"
             }
             container(name: 'builder') {
               catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
