--- a/workloads/android/pipelines/tests/cvd_launcher/Jenkinsfile
+++ b/workloads/android/pipelines/tests/cvd_launcher/Jenkinsfile
@@ -87,6 +87,9 @@ pipeline {
         stage ('Launch Virtual Devices') {
           when { expression { env.CUTTLEFISH_DOWNLOAD_URL } }
           steps {
+            script {
+              currentBuild.description = "$BUILD_USER"
+            }
             catchError(buildResult: 'FAILURE', stageResult: 'FAILURE') {
               script { env.VM_NODE_NAME = env.NODE_NAME }
               sh '''
