--- a/workloads/android/pipelines/environment/cf_instance_template/Jenkinsfile
+++ b/workloads/android/pipelines/environment/cf_instance_template/Jenkinsfile
@@ -120,6 +120,9 @@ version in ANDROID_CUTTLEFISH_REVISION field.</p>''')
 
       steps {
         container(name: 'builder') {
+          script {
+            currentBuild.description = "$BUILD_USER"
+          }
           sh '''
             BOOT_DISK_SIZE="${BOOT_DISK_SIZE}" \
             CUTTLEFISH_REVISION="${ANDROID_CUTTLEFISH_REVISION}" \
